fixed canvas resizing bug & sound bug
resizing especially on desktop causing canvas to have off-centered
scratch. Also realized that even if the sound effect was chosen during
customization, main.js has the display pop up modal window for sound
hidden (commented out during testing).

--- a/main.css
+++ b/main.css
@@ -165,16 +165,7 @@ h4 {
   text-align: center;
   display: inline-flex;
 }
-#spanMeasure 
-{
-    position:absolute;
-    top:0px;
-    left:0px;
-    visibility:hidden;
-    width:10px;
-    white-space:nowrap;
-    overflow:hidden
-}
+
 #scratcher-box {
   width:20em;
   align-content: center;
